--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -98,12 +98,12 @@
         android:paddingBottom="10dp"/>
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearlayout"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:background="#AD73F4">
+        android:background="#AD73F4"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/cameraimg"
@@ -130,17 +130,18 @@
             android:minHeight="48dp"
             android:padding="10dp"
             tools:ignore="TextContrastCheck" />
+
         <ImageView
             android:id="@+id/attachmentimg"
-            android:minHeight="10dp"
-            android:minWidth="10dp"
-            android:src="@drawable/attachment"
-            android:contentDescription="TODO"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginRight="0dp"
+            android:contentDescription="TODO"
+            android:minWidth="10dp"
+            android:minHeight="10dp"
+            android:src="@drawable/attachment" />
 
         <ImageView
             android:id="@+id/sendimg"
@@ -152,7 +153,6 @@
             android:src="@drawable/send"
 
             tools:ignore="ImageContrastCheck" />
-
 
 
     </LinearLayout>
